Issue #16 : Set VUnit docker container to GCC frontend
Signed-off-by: Mladen Knezic <mladen.knezic@etf.unibl.org>

--- a/.github/workflows/verif.yml
+++ b/.github/workflows/verif.yml
@@ -17,6 +17,7 @@ jobs:
   # This job runs self-checking tests
   verif:
     runs-on: ubuntu-latest
+    container: ghdl/vunit:gcc
 
     steps:
       - uses: actions/checkout@v4
