--- a/.github/workflows/verif.yml
+++ b/.github/workflows/verif.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v4
     
       - name: Run VUnit tests
-        uses: VUnit/vunit_action@master
+        #uses: VUnit/vunit_action@master
         with:
           cmd: scripts/run.py --gtkwave-fmt vcd
 
