--- a/.github/workflows/verif.yml
+++ b/.github/workflows/verif.yml
@@ -22,10 +22,10 @@ jobs:
       - uses: actions/checkout@v4
     
       - name: Run VUnit tests
-        #uses: VUnit/vunit_action@master
-        uses: docker://ghdl/vunit:gcc
+        uses: VUnit/vunit_action@master
         with:
-          args: scripts/run.py --gtkwave-fmt vcd
+          image: ghdl/vunit:gcc
+          cmd: scripts/run.py --gtkwave-fmt vcd
 
       - name: Archive results
         if: always()
