Issue #6 : Testing the VUnit Framework (#15)
* Issue #6 : Testing the VUnit Framework

 Adding test examples for VUnit framework.

* Issue #16 : Set VUnit docker container to GCC frontend

Signed-off-by: Mladen Knezic <mladen.knezic@etf.unibl.org>

* Issue #16 : Comment the old container reference

Signed-off-by: Mladen Knezic <mladen.knezic@etf.unibl.org>

* Issue #16 : Fix the workflow file

Signed-off-by: Mladen Knezic <mladen.knezic@etf.unibl.org>

* Issue # 19:
Fixing Issue wit Testing the VUnit Framewor

  Dodavanje izmjena u testbenchu.

* Issue #16 : Update verif workflow file

Signed-off-by: Mladen Knezic <mladen.knezic@etf.unibl.org>

* Issue #6 : Testing the VUnit Framework

-Changed the decoder_2_4 testbench

* Issue #6 : Testing the VUnit Framework

 Correcting the code in accordance with the coding standard

---------

Signed-off-by: Mladen Knezic <mladen.knezic@etf.unibl.org>
Co-authored-by: Ranko Mirosav <ranko.mirosav@student.etf.unibl.org>
Co-authored-by: Mladen Knezic <mladen.knezic@etf.unibl.org>
Co-authored-by: Danilo Cica <danilo.cica@student.etf.unibl.com>

--- a/.github/workflows/verif.yml
+++ b/.github/workflows/verif.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Run VUnit tests
         uses: VUnit/vunit_action@master
         with:
+          image: ghdl/vunit:gcc
           cmd: scripts/run.py --gtkwave-fmt vcd
 
       - name: Archive results
