--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,6 +3,10 @@ name: Style Check
 
 # Controls when the workflow will run
 on:
+  # Triggers the workflow on push events on the "main" branch
+  push:
+    branches:
+    - main
   # Triggers the workflow on pull request events on the "main" branch
   pull_request:
     branches: [ "main" ]
